# jaato

./: .dockerignore  .env.example  .gitignore  .lsp.json  .lsp.json.example  .mcp.json  CALCULATOR_PLUGIN_DOCUMENTATION_REVIEW.md  CLAUDE.md  LICENSE  PLUGIN_VERIFICATION_REPORT.md  README.md  build_connectivity_dist.py  create_self_extractor.py  gemini_script.py  pyproject.toml  requirements-telemetry.txt  requirements.txt  self_demo.yaml  test_failures_assessment.md  test_vertex.py  todo.example.json
jaato-sdk/: README.md  pyproject.toml
jaato-sdk/jaato_sdk/: __init__.py  constants.py  events.py  trace.py
jaato-sdk/jaato_sdk/client/: __init__.py  config.py  ipc.py  recovery.py
jaato-sdk/jaato_sdk/plugins/: __init__.py  base.py
jaato-sdk/jaato_sdk/plugins/model_provider/: __init__.py  types.py
jaato-sdk/jaato_sdk/plugins/todo/: __init__.py  channels.py  models.py
jaato-server/: README.md  pyproject.toml
jaato-server/jaato/: __init__.py
jaato-server/server/: README_headless_how-to.md  __main__.py  core.py  health.py  health_http.py  ipc.py  peers.py  session_manager.py  test_client.py  test_health_collector.py  test_health_http.py  test_peers.py  test_workspace_monitor_sandbox.py  websocket.py  workspace_manager.py
jaato-server/shared/: __init__.py  ai_tool_runner.py  client_commands.py  instruction_budget.py  instruction_token_cache.py  jaato_client.py  jaato_runtime.py  jaato_session.py  mcp_context_manager.py  modlog_training_pipeline.py  retry_utils.py  session_history.py  ssl_helper.py  trace.py  ui_utils.py
jaato-server/shared/plugins/: README.md  __init__.py  enrichment_formatter.py  registry.py
jaato-server/shared/plugins/anthropic_auth/: __init__.py  plugin.py
jaato-server/shared/plugins/antigravity_auth/: README.md  __init__.py  plugin.py
jaato-server/shared/plugins/artifact_tracker/: models.py  plugin.py
jaato-server/shared/plugins/ast_search/: plugin.py
jaato-server/shared/plugins/background/: mixin.py  plugin.py
jaato-server/shared/plugins/cache/: __init__.py  base.py
jaato-server/shared/plugins/cache_anthropic/: __init__.py  plugin.py
jaato-server/shared/plugins/cache_google_genai/: __init__.py  plugin.py
jaato-server/shared/plugins/cache_zhipuai/: __init__.py  plugin.py
jaato-server/shared/plugins/calculator/: plugin.py
jaato-server/shared/plugins/clarification/: channels.py  plugin.py
jaato-server/shared/plugins/cli/: plugin.py
jaato-server/shared/plugins/code_validation_formatter/: plugin.py
jaato-server/shared/plugins/diff_formatter/: __init__.py  box_drawing.py  parser.py  word_diff.py
jaato-server/shared/plugins/environment/: README.md  plugin.py
jaato-server/shared/plugins/file_edit/: __init__.py  edit_core.py  multi_file.py  plugin.py
jaato-server/shared/plugins/filesystem_query/: README.md  config_loader.py  plugin.py
jaato-server/shared/prompt_templates/: parse_mod_history_prompt.txt
jaato-server/shared/tests/: test_cancellation.py  test_deferred_plugin_instructions.py  test_gc_config.py  test_generic_plugin_persistence.py  test_jaato_client.py  test_jaato_runtime.py  test_jaato_session.py  test_output_callback.py  test_path_utils.py  test_provider_trace_routing.py  test_server_version.py  test_session_history.py  test_terminal_caps.py  test_two_phase_budget.py
jaato-server/shared/utils/: gitignore.py
jaato-tui/: .env.example  README.md  agent_panel.py  agent_registry.py  agent_tab_bar.py  backend.py  budget_panel.py  client_commands.py  command_mode.py  command_types.py  console_encoding.py  display_width.py  editor_utils.py  file_completer.py  headless_mode.py  keybindings.py  output_buffer.py  pane_manager.py  pt_display.py  pyproject.toml  rich_client.py  terminal_emulator.py  theme.py  theme_editor.py  theme_preview.py  tool_output_popup.py  ui_utils.py  workspace_panel.py
jaato-tui/.jaato.example/: .sessions.json  README.md  filesystem_query.json  gc.json  keybindings.json  permissions.json  reliability-policies.json  sandbox.json
jaato-tui/.jaato.example/instructions/: 00-system-instructions.md  README.md
jaato-tui/.jaato.example/keybindings/: README.md  tmux.json  vscode.json
jaato-tui/.jaato.example/profiles/: README.md  analyst-research.json  researcher-claude.json  validator-tier1-universal.json
jaato-tui/.jaato.example/prompts/: README.md  code-review.md  weather-forecast-spain.md
jaato-tui/.jaato.example/references/: README.md  embedding_config.json  project-docs.json
jaato-tui/.jaato.example/themes/: README.md  custom-example.json  light.json
jaato-tui/clipboard/: __init__.py  osc52.py
jaato-tui/clipboard/tests/: test_osc52.py
jaato-tui/renderers/: __init__.py  base.py  headless.py
jaato-tui/renderers/vision_capture/: __init__.py
jaato-tui/tests/: __init__.py  conftest.py  test_ellipsize_name.py  test_output_buffer.py  test_theme.py
jaato-tui/themes/: dark.json  dracula.json  high-contrast.json  latte.json  light.json  mocha.json
out-of-tree-plugins/moon-phase/: DOCUMENTATION_GAPS.md  README.md  VERIFICATION_SUMMARY.md  pyproject.toml  test_moon_phase.py
rich-client/: README.md  __init__.py  agent_panel.py  agent_registry.py  agent_tab_bar.py  app.py  backend.py  budget_panel.py  client_commands.py  client_config.py  color_picker.py  command_mode.py  editor_utils.py  headless_mode.py  ipc_client.py  ipc_recovery.py  keybindings.py  live_display.py  output_buffer.py  plan_panel.py  plan_reporter.py  preferences.py  pt_display.py  pyproject.toml  release_name.txt  rich_client.py  theme.py  theme_editor.py  theme_preview.py  tool_output_popup.py  workspace_panel.py
rich-client/clipboard/: __init__.py  config.py  image.py  native.py  osc52.py  protocol.py
rich-client/clipboard/tests/: test_osc52.py
rich-client/renderers/: __init__.py  base.py  headless.py
rich-client/server/: __init__.py  core.py  test_client.py
rich-client/tests/: conftest.py  test_editor_utils.py  test_fuzzy_matcher.py  test_output_buffer.py  test_prompt_completer.py  test_theme.py
rich-client/themes/: dark.json  dracula.json  high-contrast.json  latte.json  light.json  mocha.json
(+1091 files in other folders)
