[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaato-sdk"
version = "0.1.1"
description = "Jaato SDK - Protocol and client library for jaato server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "apanoia"}
]
keywords = ["jaato", "sdk", "ipc", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaato_sdk*"]
