[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaato-tui"
version = "0.1.26"
description = "Jaato TUI - Terminal user interface for jaato server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "apanoia"}
]
keywords = ["jaato", "tui", "terminal", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jaato-sdk",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv",
    "pyte>=0.8.0",  # Terminal emulator for tool output processing
    "wcwidth",  # For display_width module
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
vision = [
    "cairosvg>=2.7.0",  # SVG to PNG conversion for screenshots
]
all = [
    "jaato-tui[dev,vision]",
]

[project.scripts]
jaato = "rich_client.rich_client:main"

[tool.setuptools]
packages = [
    "rich_client",
    "rich_client.clipboard",
    "rich_client.renderers",
    "rich_client.renderers.vision_capture",
]

[tool.setuptools.package-data]
rich_client = [
    "themes/*.json",
    ".env.example",
    ".jaato.example/README.md",
    ".jaato.example/*.json",
    ".jaato.example/keybindings/README.md",
    ".jaato.example/keybindings/*.json",
    ".jaato.example/themes/README.md",
    ".jaato.example/themes/*.json",
    ".jaato.example/profiles/README.md",
    ".jaato.example/profiles/*.json",
    ".jaato.example/instructions/README.md",
    ".jaato.example/instructions/*.md",
    ".jaato.example/prompts/README.md",
    ".jaato.example/prompts/*.md",
    ".jaato.example/references/README.md",
    ".jaato.example/references/*.json",
]

[tool.setuptools.package-dir]
rich_client = "."
